--- a/style.css
+++ b/style.css
@@ -168,9 +168,8 @@ body {
   display: flex;
   flex-wrap: wrap;
   justify-content: flex-start;
-  /* gap: 10px; */
+  gap: 10px;
   margin: 20px 5%;
-  /* background-color: green; */
 }
 
 .teams .cards .card {
