--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ body {
 /* hero */
 
 .hero {
-  background-image: url("./1.png");
+  background-image: url("./images/1.png");
   background-color: #4b494d;
   background-position: center;
   background-repeat: no-repeat;
@@ -90,25 +90,128 @@ body {
 
 /* about-us */
 .about-us {
-  display: flex;
-  gap: 0;
-  margin: 100px;
+  background: #f8f8f8;
+  overflow: hidden;
+  margin: 100px 0;
 }
 
-.about-us img {
-  width: 500px;
-}
-
-.about-us .about {
-  background: white;
-}
-
-.about-us .about h2 {
+.about-us .title h2 {
+  font-size: 40px;
   text-align: center;
+  margin-top: 35px;
 }
 
-.about-us .about p {
-  padding: 20px 10%;
+.about-us .container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 90%;
+  margin: 65px auto;
+}
+
+.about-us .container .about {
+  flex: 1;
+  width: 600px;
+  margin: 0 25px;
+  animation: fadeInUp 2s ease;
+}
+.about-us .container .about h2 {
+  font-size: 38px;
+  margin-bottom: 20px;
+  color: #333;
+}
+
+.about-us .container .about p {
+  font-size: 24px;
+  line-height: 1.5;
+  margin-bottom: 40px;
+  color: #666;
+}
+
+.about-us .container .about button {
+  display: inline-block;
+  background-color: #ff4500;
+  color: #fff;
+  padding: 12px 24px;
+  border-radius: 5px;
+  font-size: 20px;
+  border: none;
+  cursor: pointer;
+  transition: 0.3s ease;
+}
+
+.about-us .container .about button:hover {
+  background: #ff6347;
+  transform: scale(1.1);
+}
+
+.about-us .container .about-image .about-image {
+  flex: 1;
+  width: 600px;
+  margin: auto;
+  animation: fadeInRight 2s ease;
+}
+
+.about-us .container .about-image img {
+  width: 100%;
+  height: auto;
+  border-radius: 10px;
+}
+
+@media screen and (max-width: 760px) {
+  .about-us .title h1 {
+    font-size: 45px;
+    margin-top: 30px;
+  }
+  .about-us {
+    margin: 0;
+  }
+  .about-us .container {
+    width: 100%;
+    flex-direction: column;
+    margin: 0;
+    padding: 0 40px;
+  }
+  .about-us .container .about {
+    width: 100%;
+    margin: 35px 0;
+  }
+  .about-us .container .about h2 {
+    font-size: 30px;
+  }
+  .about-us .container .about p {
+    font-size: 18px;
+    margin-bottom: 20px;
+  }
+  .about-us .container .about button {
+    font-size: 16px;
+    padding: 8px 16px;
+  }
+  .about-us .container .about-image {
+    width: 100%;
+  }
+}
+
+@keyframes fadeInUp {
+  0% {
+    opacity: 0;
+    transform: translateY(50px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0px);
+  }
+}
+
+@keyframes fadeInRight {
+  0% {
+    opacity: 0;
+    transform: translateY(-50px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0px);
+  }
 }
 
 /* services */
@@ -138,6 +241,7 @@ body {
 
 .services .cards .card img {
   width: 100px;
+  height: 100px;
   border-radius: 50%;
 }
 
